<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/prompt_thin"
        android:text="@string/title2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/icons8_user_100" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="344dp"
        android:layout_height="460dp"
        android:fontFamily="@font/prompt_thin"
        android:text="@string/paragrap"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:ignore="MissingConstraints" />




    <androidx.cardview.widget.CardView
        android:layout_width="358dp"
        android:layout_height="99dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853"
        tools:ignore="MissingConstraints" >


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="18sp"
            android:fontFamily="@font/prompt_thin"
            android:text="@string/chatbox"
            android:textColor="@color/black"
            android:textSize="23sp" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="50sp"
            android:fontFamily="@font/baloo_tamma_2"
            android:text="@string/destription"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="44dp"
            android:layout_height="47dp"
            android:layout_marginStart="280sp"
            android:layout_marginTop="25sp"
            app:srcCompat="@drawable/icons8_next_page_81" />


    </androidx.cardview.widget.CardView>







</androidx.constraintlayout.widget.ConstraintLayout>