<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="63dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/icons8_user_100" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="TextView"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:layout_width="137dp"
        android:layout_height="61dp"
        app:cardBackgroundColor="#9B6576"
        app:cardCornerRadius="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="13sp"
            app:srcCompat="@drawable/icons8_log_out_101" />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="75sp"
            android:layout_marginTop="13sp"
            app:srcCompat="@drawable/icons8_delete_100" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="365dp"
        android:layout_height="116dp"
        app:cardBackgroundColor="#9B6576"
        app:cardCornerRadius="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="18sp"
            android:fontFamily="@font/cabin"
            android:text="@string/updateemail"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="293dp"
            android:layout_height="42dp"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="55sp"
            android:background="@drawable/inputtext1"
            android:ems="10"
            android:fontFamily="@font/baloo_2_medium"
            android:hint="@string/hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="33sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="365dp"
        android:layout_height="116dp"
        app:cardBackgroundColor="#9B6576"
        app:cardCornerRadius="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="18sp"
            android:fontFamily="@font/cabin"
            android:text="@string/updatepassword"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="293dp"
            android:layout_height="42dp"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="55sp"
            android:background="@drawable/inputtext1"
            android:ems="10"
            android:fontFamily="@font/baloo_2_medium"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:paddingLeft="33sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button2"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:background="@drawable/inputtext1"
        android:fontFamily="@font/baloo_2_medium"
        android:text="@string/updatebutton"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/icons8_next_page_81" />


</androidx.constraintlayout.widget.ConstraintLayout>