<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ChatBoxActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="423dp"
        android:layout_height="720dp"
        android:layout_margin="8sp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:listitem="@layout/chatresponse1" />

    <!-- Üstteki CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="325dp"
        android:layout_height="78dp"
        app:cardBackgroundColor="@color/pink1"
        app:cardCornerRadius="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/cabin"
            android:text="@string/app"
            android:textColor="@color/pink"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginTop="40sp"
            android:fontFamily="@font/cabin"
            android:text="@string/appdescription"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <!-- Sağdaki ImageView -->
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="54dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/icons8_next_page_81" />

    <!-- Arama için EditText -->

    <!-- Mesaj Gönderme için CardView -->

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/inputtext1"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingLeft="22sp"
        android:textColor="@color/pink"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Mesaj Listesi için RecyclerView -->
    <androidx.cardview.widget.CardView
        android:layout_width="66dp"
        android:layout_height="67dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="13sp"
            app:srcCompat="@drawable/icons8_send_100" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
